# mlops-zoomcamp

./: .gitignore  prefect.yaml  pyproject.toml
.prefect/: flows.json
02-experiment-tracking/: duration-prediction.ipynb
03-orchestration/3.1/3.2/: cat_dog_facts.py
03-orchestration/3.1/3.3/: orchestrate.py  orchestrate_pre_prefect.py
03-orchestration/3.3/: orchestrate.py
03-orchestration/3.5/: create_s3_bucket_block.py  orchestrate_s3.py
04-deployment/web-service/: predict.py  test.py
04-deployment/web-service-mlflow/: predict.py  random-forest.ipynb
cohorts/2023/02-experiment-tracking/homework/: train.py
homeworks/: duration-prediction.ipynb
homeworks/02-experiment-tracking/: homewrok2.ipynb
homeworks/02-experiment-tracking/utils/: hpo.py  preprocess_data.py  register_model.py  train.py
homeworks/03-orchestration/: homewok-3.ipynb  orchestrate.py
