[tool.poetry]
name = "poetry shell"
version = "0.1.0"
description = ""
authors = ["renzo-guarise <renzo.guarise@mercadolibre.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
